# lumberjack

./: .env.example  Cargo.toml  README.md  test.sh
src/: main.rs
static/: main.css  main.js  worker.log-parser.js
templates/: hello.twig.html  root.twig.html
