[package]
name = "lumberjack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
askama = "0.12.1"
axum = "0.7.5"
askama_axum = "0.4.0"
chrono = "0.4.37"
dotenv = "0.15.0"
regex = "1.10.4"
serde = "1.0.197"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

[features]
default = ["askama/default"]
config = ["askama/config"]
humansize = ["askama/humansize"]
num-traits = ["askama/num-traits"]
serde-json = ["askama/serde-json"]
urlencode = ["askama/urlencode"]
