[package]
name = "lumberjack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
axum = "0.7.5"
askama = "0.12.1"
askama_axum = "0.4.0"
chrono = "0.4.37"
regex = "1.10.4"
serde = "1.0.197"
anyhow = "1.0.81"
dotenv_codegen = "0.15.0"
rand = "0.8.5"
owo-colors = "3"
